--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <script src="https://kit.fontawesome.com/3cbc773f6b.js" crossorigin="anonymous"></script>
+    <title>Platzi Store</title>
 </head>
 <body>
     <div id="app"></div>
